src/test/ui/proc-macro/proc-macro-gates2.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0658]: the attribute `empty_attr` is currently unknown to the compiler and may have meaning added to it in the future
=======
error: expected an inert attribute, found an attribute macro
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/proc-macro-gates2.rs:12:11
   |
LL | fn _test6<#[empty_attr] T>() {}
   |           ^^^^^^^^^^^^^
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add `#![feature(custom_attribute)]` to the crate attributes to enable
=======
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0658]: the attribute `empty_attr` is currently unknown to the compiler and may have meaning added to it in the future
=======
error: expected an inert attribute, found an attribute macro
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/proc-macro-gates2.rs:17:9
   |
LL |         #[empty_attr]
   |         ^^^^^^^^^^^^^
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/29642
   = help: add `#![feature(custom_attribute)]` to the crate attributes to enable
=======
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

error: aborting due to 2 previous errors

